--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4241,3 +4241,8 @@ button:hover,
 	width: 100px !important;
 	height: 100px !important;
 }
+.lottie-component{
+	display: inline-block;
+	width: 100px !important;
+	height: 100px !important;
+}
